[gd_scene load_steps=3 format=2]

[ext_resource path="res://dev/ten-seconds/ten-seconds.gd" type="Script" id=1]
[ext_resource path="res://dev/ten-seconds/411729__inspectorj__wind-chime-tolling-a.wav" type="AudioStream" id=2]

[node name="TenSeconds" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Timer1" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0

[node name="Chime1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.0
bus = "Inside"

[node name="Chime2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.0
bus = "Inside"

[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
